Version 10.3 - La Abadia del Crimen edition. 10 May 2023

There are lots of changes in this version, but some of them are remarkable:
- Added machines Amstrad PCW 8256, PCW 8512, CPC 6128, CPC 664
- Fixed 3" CF2 floppy disk emulation (used on +3, CPC, PCW): the floppy disk emulation has been rewritten from scratch and now is near perfect
- Lots of improvements on Debug CPU window
- Fixed almost all annoying audio clicks on Windows version (and on SDL audio driver on Linux)


The full changelog for this version 10.3 is:

* New things added:

Added Machine Amstrad PCW 8256
Added Machine Amstrad PCW 8512
Added Machine Amstrad CPC 6128
Added Machine Amstrad CPC 664
Added Visual Floppy to see floppy disk (+3, CPC, PCW, Betadisk) activity
Added DSK disk info menu: to get tracks and sectors of a disk
Added F-Functions: Poke, Visual Real Tape, Settings, Switch footer
Added Process Switcher window, which is like a "Taskbar" on the ZX Desktop
Added ZRCP command: "close-all-menus"
Added icon/F-key to open any window identified by its name
Allow F-keys to assign extra info for actions (like window name on openwindow action, or snapshot name on linktosnapshot action)
Added more Hotswap combinations
Added Advanced menu items: now by default, advanced menu items are hidden, you should enable them on Settings->Advanced menu items
Added command line setting --machinelist to get machines list names whitespace separated
Added .POK file Smartloading
Added XEyes "Toy" to follow mouse
Added Sierpinsky Meter Type to View Sensors

* Improvements:

Improved Debug CPU:
- switched function keys "m" and "o": now "x" change mode, and "m" change memptr (to be coherent with other similar windows) 
- added (hl), (de), (bc)
- added (nn) when selecting an opcode like: ld reg,(nn) and ld (nn),reg
- added (ix+d), (iy+d) when selecting an opcode like: ld reg,(IX+d), etc
- added continuos speed 4 (run 10 opcodes every time, with no pause)
- show last memory pointer when changing it