@@ -1,3 +1,6 @@
+Version X - Edición décimo aniversario. 16 Mayo 2023
+
+
 Version 10.3 - La Abadia del Crimen edition. 10 Mayo 2023
 
 Hay un montón de cambios en esta versión, pero algunos son destacables:
