@@ -159,9 +159,18 @@ Seria: error message: igual que hay ahora. Y luego clases: 0001 out of memory. 0
 
 -en rpi quiza compilar con onebitspeaker? o no? entiendo que pcspeaker no usara sino que intentara usar gpio
 
-ok -opcion volcar por consola compile info. ya existe con --showcompileinfo
-
 -con el ay player mostrar por consola cada cancion que va entrando. util para reproducir musica random por consola y sin driver video
+
+
+-Función joystick conmuta full screen 
+-F función cualquiera Tecla F por joystick 
+
+-Teclado en pantalla en gpi borra el input de debajo 
+
+-Miniatura de zip
+-Miniatura de directorio. Parecido a zip
+
+-Smartload path tiene setting en command line? Y en menú?
 
 --Fin mejoras
 
