@@ -7,7 +7,7 @@
 <key>CFBundleDisplayName</key>
 <string>ZEsarUX</string>
 <key>CFBundleVersion</key>
-<string>10.3</string>
+<string>10.10</string>
 <key>CFBundleIdentifier</key>
 <string>com.cesarhernandez.zesarux</string>
 <key>CFBundlePackageType</key>
