@@ -137,5 +137,7 @@ extern z80_bit keyboard_swap_enter_return;
 
 extern z80_bit zsf_snap_save_rom;
 
+extern z80_bit xanniversary_logo;
+
 #endif
 
