@@ -1,3 +1,9 @@
+Version X - 10th Anniversary edition. 16 May 2023
+
+This is a special edition. Version is called "X" (actually is 10.10)
+
+Added Docker support
+
 Version 10.3 - La Abadia del Crimen edition. 10 May 2023
 
 There are lots of changes in this version, but some of them are remarkable:
